RESOLVED FIXED32306
[V8] Isolated world reuse failure
https://bugs.webkit.org/show_bug.cgi?id=32306
Summary [V8] Isolated world reuse failure
Søren Gjesse
Reported 2009-12-08 23:56:36 PST
The layout test LayoutTests/http/tests/security/isolatedWorld/world-reuse.html fails with V8 bindings changes introduced in r51407 (http://trac.webkit.org/changeset/51407). See http://crbug.com/28905 for details.
Attachments
Patch (1.76 KB, patch)
2009-12-09 04:50 PST, Søren Gjesse
pfeldman: review-
Patch fixing webkit style (1.74 KB, patch)
2009-12-09 05:13 PST, Søren Gjesse
no flags
Søren Gjesse
Comment 1 2009-12-09 04:50:08 PST
WebKit Review Bot
Comment 2 2009-12-09 04:54:21 PST
Attachment 44529 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/bindings/v8/V8Proxy.cpp:396: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/bindings/v8/V8Proxy.cpp:398: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/bindings/v8/V8Proxy.cpp:1383: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebCore/bindings/v8/V8Proxy.cpp:1383: Use 0 instead of NULL. [readability/null] [5] WebCore/bindings/v8/V8Proxy.cpp:1384: Use 0 instead of NULL. [readability/null] [5] Total errors found: 5
Pavel Feldman
Comment 3 2009-12-09 05:05:30 PST
Comment on attachment 44529 [details] Patch > + if (debugId == -1) { > + snprintf(buffer, sizeof(buffer), "injected"); > + } else { > + snprintf(buffer, sizeof(buffer), "injected,%d", debugId); > + } no {} for single line bodies > targetContext->SetData(v8::String::New(buffer)); > > return true; > @@ -1378,6 +1380,8 @@ int V8Proxy::contextDebugId(v8::Handle<v > return -1; > v8::String::AsciiValue ascii(context->GetData()); > char* comma = strnstr(*ascii, ",", ascii.length()); > + if (comma == NULL) > + return NULL; if (!comma) return 0; > return atoi(comma + 1); > } >
Søren Gjesse
Comment 4 2009-12-09 05:13:26 PST
Created attachment 44530 [details] Patch fixing webkit style
WebKit Commit Bot
Comment 5 2009-12-09 06:34:45 PST
Comment on attachment 44530 [details] Patch fixing webkit style Rejecting patch 44530 from commit-queue. Unexpected failure when landing patch! Please file a bug against bugzilla-tool. Failed to run "['WebKitTools/Scripts/bugzilla-tool', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', '--quiet', '44530']" exit_code: 1 Last 500 characters of output: nd_handle_errors self.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 54, in run self.clean() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 81, in clean step.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/buildsteps.py", line 101, in run os.chdir(self._tool._scm.checkout_root) AttributeError: 'NoneType' object has no attribute 'checkout_root'
Dimitri Glazkov (Google)
Comment 6 2009-12-09 09:35:42 PST
Comment on attachment 44530 [details] Patch fixing webkit style Let's try again?
WebKit Commit Bot
Comment 7 2009-12-09 09:36:56 PST
Comment on attachment 44530 [details] Patch fixing webkit style Rejecting patch 44530 from commit-queue. Unexpected failure when landing patch! Please file a bug against bugzilla-tool. Failed to run "['WebKitTools/Scripts/bugzilla-tool', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', '--quiet', '44530']" exit_code: 1 Last 500 characters of output: nd_handle_errors self.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 54, in run self.clean() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 81, in clean step.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/buildsteps.py", line 101, in run os.chdir(self._tool._scm.checkout_root) AttributeError: 'NoneType' object has no attribute 'checkout_root'
Eric Seidel (no email)
Comment 8 2009-12-09 11:03:29 PST
This is from Adam's refactoring of the queues last night. I'll stop the commit-queue and we'll get a fix in shortly.
Eric Seidel (no email)
Comment 9 2009-12-09 11:36:27 PST
Comment on attachment 44530 [details] Patch fixing webkit style Sorry for the noise. Adam believes to have fixed the issue. I've restarted the commit bot.
WebKit Commit Bot
Comment 10 2009-12-09 12:14:21 PST
Comment on attachment 44530 [details] Patch fixing webkit style Clearing flags on attachment: 44530 Committed r51912: <http://trac.webkit.org/changeset/51912>
WebKit Commit Bot
Comment 11 2009-12-09 12:14:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.